# deep-session-gen

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  main.py  make_paper_pdf.py  paper.tex  pyproject.toml
.github/workflows/: ci.yml
agent/: live_dj.py  live_engine.py  run.py  tools.py
openspec/changes/unified-track-catalog-and-smart-sessions/: design.md  proposal.md  tasks.md
tests/: test_analyze_transition.py  test_beatgrid.py  test_bpm.py  test_bridge_tools.py  test_crossfade_eq.py  test_live_engine.py  test_live_tools.py  test_mix.py
tests/web/: conftest.py  test_app_auth.py  test_app_sessions.py  test_auth_unit.py  test_db.py  test_session_store.py  test_ws_manager.py  test_ws_session.py
tracks/cyberpunk/: session.json
tracks/deep house/: session 9.json
tracks/lofi - ambient/: session 10.json  session 11.json  session 12.json  session 4.json  session 5.json  session 7.json  session 8.json
tracks/techno/: session 6.json
web/backend/: app.py  auth.py  db.py  mock_pipeline.py  models.py  pipeline.py  session_store.py  ws_manager.py
web/frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/frontend/app/: globals.css  layout.tsx  page.tsx
web/frontend/app/catalog/: page.tsx
web/frontend/app/dashboard/: page.tsx
web/frontend/app/login/: page.tsx
web/frontend/app/register/: page.tsx
web/frontend/components/: AgentStream.tsx  CriticPanel.tsx  PlaylistPanel.tsx
web/frontend/e2e/: auth.spec.ts  dashboard.spec.ts  errors.spec.ts  multiuser.spec.ts  pipeline.spec.ts  regression.spec.ts  reload.spec.ts
web/frontend/lib/: api.ts  auth.ts  types.ts  ws.ts
(+8 files in other folders)
